<resources>
    <string name="app_name">Minecraft Spigot Manager</string>
    <string name="tab_players_active">Active players</string>
    <string name="tab_players_whitelisted">Whitelisted players</string>
    <string name="tab_players_banned">Banned players</string>
    <string name="label_url">Url</string>
    <string name="button_players_activity">Show players</string>
    <string name="label_token">Token</string>
    <string name="button_server_info_save">Save</string>
    <string name="label_logs">Logs</string>
    <string name="label_status">Status</string>
</resources>