<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MinecraftSpigotManager.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight = "1"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_url"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/activity_main__url"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_token"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/activity_main__token"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            />

        <Button
            android:id="@+id/activity_main__button_server_info_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_server_info_save"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_logs"
                android:layout_weight = "1"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_refresh_24"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:layout_weight = "1"
            android:id="@+id/activity_main__text_view_logs"
            android:textStyle="bold"
            android:background="@color/gray"
            android:padding="5dp"
            />

        <Button
            android:id="@+id/activity_main__button_players_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_players_activity"
            />

    </LinearLayout>



</LinearLayout>